--- a/aftermarket.html
+++ b/aftermarket.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Онлайн просмотр</title>
-<script defer src="./script/onlineViewing.6ca6257507f00aa0d9bd.js"></script><link href="./style/onlineViewing.9e0f0eabf78022917018.css" rel="stylesheet"></head>
+    <title>Послепродажный сервис</title>
+<script defer src="./script/aftermarket.faf42bc9b92259753826.js"></script><link href="./style/aftermarket.8ed2857f84de9a296d77.css" rel="stylesheet"></head>
 <body>
-<header class="header">
+    <header class="header">
     <div class="container">
         <div class="header__inner">
             <a href="#" class="header__logo">
@@ -533,15 +533,15 @@
     </div>
 </header>
     <main>
-        <section class="banner-top banner-top_online-view">
+        <section class="banner-top banner-top_aftermarket">
             <div class="container">
                 <h1 class="banner-top__title">
-                    online просмотр
+                    Послепродаж<br>ный сервис
                     <picture><source srcset="img/banner-top/name.webp" type="image/webp"> <img src="img/banner-top/name.png" alt="name"> </picture>
                 </h1>
             </div>
         </section>
-        <section class="online-viewing">
+        <section class="aftermarket">
             <div class="container">
                 <ul class="breadcrumbs">
                     <li>
@@ -550,27 +550,128 @@
                     <li>
                         <a href="#" class="breadcrumbs__link">Услуги</a>
                     </li>
-                    <li>Online просмотр</li>
+                    <li>Послепродажный сервис</li>
                 </ul>
-                <div class="online-viewing__inner">
-                    <div class="online-viewing__texts">
+                <div class="aftermarket__inner">
+                    <div class="aftermarket__text">
                         <p>
-                            С агентством недвижимости «Project Home» вы можете посмотреть полюбившуюся вам квартиру онлайн.
+                            Если вы приобретаете недвижимость в Турции в агентстве «Project Home», то, помимо прекрасной собственности, вы получаете доступ к нашему обширному послепродажному сервису. Это значит, что мы поможем вам обжиться на новом месте, если вы переезжаете, и обслуживать квартиру, даже если вы пока не живете в Турции.
                         </p>
                         <p>
-                            Наши менеджеры свяжутся с вами и в видео покажут выбранные апартаменты или виллу во всех деталях. Вы сможете полюбоваться видом из окна, виртуально посетить каждую комнату, заглянуть в ящички кухонного гарнитура, осмотреться на территории комплекса.
+                            Наш послепродажный сервис славится четкостью и профессионализмом. Вот какие услуги мы можем вам оказать после заключения сделки:
                         </p>
                     </div>
-                    <div class="online-viewing__img">
-                        <picture><source srcset="img/online-viewing/1.webp" type="image/webp"> <img src="img/online-viewing/1.jpg" alt="image"> </picture>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            ВНЖ и турецкое гражданство
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/1.webp" type="image/webp"> <img src="img/aftermarket/1.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                Мы поможем вам собрать все нужные документы для вида на жительство в Турции. Если же ваша недвижимость подходит под условия упрощенного получения турецкого гражданства, то и здесь мы проведем вас по всем стадиям «упрощенки». Это неотъемлемая часть риелторского сервиса после покупки.
+                            </p>
+                        </div>
                     </div>
-                    <div class="online-viewing__texts">
-                        <p>
-                            С агентством недвижимости «Project Home» вы можете посмотреть полюбившуюся вам квартиру онлайн.
-                        </p>
-                        <p>
-                            Наши менеджеры свяжутся с вами и в видео покажут выбранные апартаменты или виллу во всех деталях. Вы сможете полюбоваться видом из окна, виртуально посетить каждую комнату, заглянуть в ящички кухонного гарнитура, осмотреться на территории комплекса.
-                        </p>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            ИП в Турции
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/2.webp" type="image/webp"> <img src="img/aftermarket/2.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                Наши сотрудники проконсультируют вас, если у вас в планах — открытие собственного бизнеса в Турции.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            Заключение абонентских договоров на водоснабжение, электричество, газ, подключение спутникового телевидения и быстрого интернета, оформление турецкой SIM-карты
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/3.webp" type="image/webp"> <img src="img/aftermarket/3.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                Мы поможем вам оформить на себя счетчики воды и электричества, договоримся о проведении интернета и телефона, подключим спутниковые каналы. Вы быстро получите все, что нужно для комфортного проживания в собственной квартире.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            Сдача в аренду
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/4.webp" type="image/webp"> <img src="img/aftermarket/4.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                Еще одна услуга послепродажного сервиса — помощь в поиске арендаторов. Если вы хотите сдавать вашу недвижимость в аренду, агентство «Project Home» поможет и с этим. Мы подберем клиентов, составим договор. Можно сдавать на краткий срок, можно на долгий.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            Ремонт и дизайн
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/5.webp" type="image/webp"> <img src="img/aftermarket/5.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                Мы поможем вам перепланировать вашу недвижимость в Турции, если вы хотите уникальную планировку. У нас есть база мастеров ремонта и дизайнеров, которые справятся со всем. Можно, например, заказать удобные ниши в детской, зонировать кухню-гостиную, выделить антресоли в европейском стиле под спальное место. Учтем любые ваши пожелания!
+                            </p>
+                            <p>
+                                Немногие знают, что дизайнер от агентства недвижимости может сопровождать вас при покупке мебели и бытовой утвари в турецких магазинах и даже заранее спроектировать, как будет выглядеть ваша спальня или кухня в новых апартаментах. Между тем, это обычная практика в нашем агентстве и часть послепродажного сервиса. И главное — все квартиры выходят разными, но всегда с высококлассным эргономичным дизайном, который отражает владельцев.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            Уборка квартиры
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/6.webp" type="image/webp"> <img src="img/aftermarket/6.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                Если, уезжая, вы забыли что-то убрать или передать кому-то, то можете просто сообщить об этом нашим менеджерам. Они с радостью помогут, например, убрать сыр из холодильника или передать какие-то вещи вашим друзьям в Турции.
+                            </p>
+                            <p>
+                                А если владелец приезжает пожить в своей турецкой квартире после долгого отсутствия, мы подготовим квартиру к приезду. Конечно же, мы закажем полную уборку помещения с парогенератором и проверим состояние квартиры в целом.
+                            </p>
+                            <p>
+                                Заказывать периодически клининг можно и в случае, если вы постоянно живете в квартире. Очень удобно! Можем и персонал подобрать для постоянной работы — найдем няню, мастера клининга, повара.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="aftermarket__item">
+                        <h2 class="title">
+                            Автомобиль в аренду
+                        </h2>
+                        <div class="aftermarket__img">
+                            <picture><source srcset="img/aftermarket/7.webp" type="image/webp"> <img src="img/aftermarket/7.jpg" alt="image"> </picture>
+                        </div>
+                        <div class="aftermarket__text">
+                            <p>
+                                А может, вы хотите изучить Турцию за рулем хорошей машины? Мы поможем вам и в этом — предоставим в аренду отличные автомобили любой нужной вам марки и комплектации. И действительно, удобнее всего знакомиться с Турцией в спокойном путешествии по ее маленьким городкам и крупным городам.
+                            </p>
+                            <p>
+                                Если же вы хотите купить автомобиль, то мы проконсультируем при покупке и поможем юридически проверить договор о покупке.
+                            </p>
+                            <p>
+                                И это еще не все…
+                            </p>
+                            <p>
+                                Наши менеджеры работают с самыми разными вашими запросами. Как устроить ребенка в турецкую школу? Расскажем! Как добраться из Антальи, допустим, в Стамбул? Все объясним и, если нужно, купим для вас билет на самолет, поезд или автобус. Можем составить для вас список магазинов, посоветовать, куда сходить и что посмотреть...
+                            </p>
+                            <p>
+                                Если вы покупаете у нас недвижимость в Турции, то наши отношения не заканчиваются с финалом сделки. Мы остаемся вашими постоянными союзниками и проводниками.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
