--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Homes</title>
-<script defer src="./script/main.6ca6257507f00aa0d9bd.js"></script><link href="./style/main.61fc15b0a7e64bd945dc.css" rel="stylesheet"></head>
+<script defer src="./script/main.faf42bc9b92259753826.js"></script><link href="./style/main.bbc61d2a810df8d481e7.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -851,7 +851,7 @@
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
                                         </svg>
                                     </button>
-                                    <button class="rec-slider__favorite">
+                                    <button class="rec-slider__favorite rec-slider__favorite_press">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.11307 10.93L5.19559 16.2793L9.99958 13.7537L14.8036 16.2793L13.8861 10.93L17.7726 7.14157L12.4016 6.36111L9.99958 1.49414L7.59759 6.36111L2.22656 7.14157L6.11307 10.93ZM12.4532 10.4645L13.0324 13.8419L9.9993 12.2473L6.96615 13.8419L7.54543 10.4645L5.09156 8.07255L8.48273 7.57979L9.9993 4.50688L11.5159 7.57979L14.907 8.07255L12.4532 10.4645Z" fill="white"/>
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
@@ -892,7 +892,7 @@
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
                                         </svg>
                                     </button>
-                                    <button class="rec-slider__favorite">
+                                    <button class="rec-slider__favorite rec-slider__favorite_press">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.11307 10.93L5.19559 16.2793L9.99958 13.7537L14.8036 16.2793L13.8861 10.93L17.7726 7.14157L12.4016 6.36111L9.99958 1.49414L7.59759 6.36111L2.22656 7.14157L6.11307 10.93ZM12.4532 10.4645L13.0324 13.8419L9.9993 12.2473L6.96615 13.8419L7.54543 10.4645L5.09156 8.07255L8.48273 7.57979L9.9993 4.50688L11.5159 7.57979L14.907 8.07255L12.4532 10.4645Z" fill="white"/>
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
@@ -933,7 +933,7 @@
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
                                         </svg>
                                     </button>
-                                    <button class="rec-slider__favorite">
+                                    <button class="rec-slider__favorite rec-slider__favorite_press">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.11307 10.93L5.19559 16.2793L9.99958 13.7537L14.8036 16.2793L13.8861 10.93L17.7726 7.14157L12.4016 6.36111L9.99958 1.49414L7.59759 6.36111L2.22656 7.14157L6.11307 10.93ZM12.4532 10.4645L13.0324 13.8419L9.9993 12.2473L6.96615 13.8419L7.54543 10.4645L5.09156 8.07255L8.48273 7.57979L9.9993 4.50688L11.5159 7.57979L14.907 8.07255L12.4532 10.4645Z" fill="white"/>
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
@@ -974,7 +974,7 @@
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
                                         </svg>
                                     </button>
-                                    <button class="rec-slider__favorite">
+                                    <button class="rec-slider__favorite rec-slider__favorite_press">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.11307 10.93L5.19559 16.2793L9.99958 13.7537L14.8036 16.2793L13.8861 10.93L17.7726 7.14157L12.4016 6.36111L9.99958 1.49414L7.59759 6.36111L2.22656 7.14157L6.11307 10.93ZM12.4532 10.4645L13.0324 13.8419L9.9993 12.2473L6.96615 13.8419L7.54543 10.4645L5.09156 8.07255L8.48273 7.57979L9.9993 4.50688L11.5159 7.57979L14.907 8.07255L12.4532 10.4645Z" fill="white"/>
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
@@ -1015,7 +1015,7 @@
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
                                         </svg>
                                     </button>
-                                    <button class="rec-slider__favorite">
+                                    <button class="rec-slider__favorite rec-slider__favorite_press">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M6.11307 10.93L5.19559 16.2793L9.99958 13.7537L14.8036 16.2793L13.8861 10.93L17.7726 7.14157L12.4016 6.36111L9.99958 1.49414L7.59759 6.36111L2.22656 7.14157L6.11307 10.93ZM12.4532 10.4645L13.0324 13.8419L9.9993 12.2473L6.96615 13.8419L7.54543 10.4645L5.09156 8.07255L8.48273 7.57979L9.9993 4.50688L11.5159 7.57979L14.907 8.07255L12.4532 10.4645Z" fill="white"/>
                                             <circle cx="10" cy="10" r="9.5" stroke="white"/>
