add team and feature

--- a/object.html
+++ b/object.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Объект</title>
-<script defer src="./script/object.faf42bc9b92259753826.js"></script><link href="./style/object.6306ba7b9d1c8f4b818e.css" rel="stylesheet"></head>
+<script defer src="./script/object.8cb6a86f37a32eb17ad0.js"></script><link href="./style/object.e11e7b2c7cffa7913324.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -631,7 +631,7 @@
                                         </button>
                                     </li>
                                      <li>
-                                        <button class="home-object-desc__action">
+                                        <button class="home-object-desc__action home-object-desc__action_press">
                                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M6.11307 10.93L5.19559 16.2793L9.99958 13.7537L14.8036 16.2793L13.8861 10.93L17.7726 7.14157L12.4016 6.36111L9.99958 1.49414L7.59759 6.36111L2.22656 7.14157L6.11307 10.93ZM12.4532 10.4645L13.0324 13.8419L9.9993 12.2473L6.96615 13.8419L7.54543 10.4645L5.09156 8.07255L8.48273 7.57979L9.9993 4.50688L11.5159 7.57979L14.907 8.07255L12.4532 10.4645Z" fill="black"/>
                                                 <circle cx="10" cy="10" r="9.5" stroke="black"/>
