add video in main page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Homes</title>
-<script defer src="./script/main.eb59145ce5614f6e7cb9.js"></script><link href="./style/main.314e76a0dc27179a9d3d.css" rel="stylesheet"></head>
+<script defer src="./script/main.b069a9a555fe39825f56.js"></script><link href="./style/main.54c36a9195b1d333aae2.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -533,7 +533,7 @@
         </div>
     </header>
     <div class="main-bg">
-        <picture><source srcset="img/backgrounds/main-bg.webp" type="image/webp"> <img src="img/backgrounds/main-bg.png" alt="background"> </picture>
+        <video src="videos/main-bg.mp4" autoplay muted playsinline loop></video>
     </div>
     <main>
         <section class="search">
