--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Homes</title>
-<script defer src="./script/main.cf2244d50ddf1b5f597c.js"></script><link href="./style/main.00f4202a32e444e833bd.css" rel="stylesheet"></head>
+<script defer src="./script/main.366aeca72b6a9af52238.js"></script><link href="./style/main.00f4202a32e444e833bd.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -533,7 +533,7 @@
         </div>
     </header>
     <div class="main-bg">
-        <video src="videos/main-bg.mp4" autoplay muted playsinline loop></video>
+        <video src="videos/ocean.mp4" autoplay muted playsinline loop></video>
     </div>
     <main>
         <section class="search">
