fix infrastructure in object

--- a/object.html
+++ b/object.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Объект</title>
-<script defer src="./script/object.93b3cef04271114288bb.js"></script><link href="./style/object.f2d0c0d1bfb8af8aaebf.css" rel="stylesheet"></head>
+<script defer src="./script/object.95a52bf6de8e66561f4b.js"></script><link href="./style/object.640919afcfda78877e9d.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -783,7 +783,7 @@
                 </div>
                 <div class="home-object-infrastructure">
                     <div class="home-object-infrastructure__img">
-                        <picture><source srcset="img/home-object/object.webp" type="image/webp"> <img src="img/home-object/object.jpg" alt="image"> </picture>
+                        <picture><source srcset="img/home-object/object-2.webp" type="image/webp"> <img src="img/home-object/object-2.jpg" alt="image"> </picture>
                     </div>
                     <div class="home-object-infrastructure__info">
                         <h2 class="home-object-infrastructure__title">
