add hot in realty.html

--- a/realty.html
+++ b/realty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Недвижимость в турции</title>
-<script defer src="./script/realty.e925e8604e0886e037ec.js"></script><link href="./style/realty.c15808de046d1f0d4b05.css" rel="stylesheet"></head>
+<script defer src="./script/realty.23559676f96b2781e079.js"></script><link href="./style/realty.dad3b79678d55ae9a514.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="container">
@@ -779,6 +779,9 @@
                 </div>
                 <div class="realty__items">
                     <a href="#" class="realty-item">
+                        <div class="realty-item__hot">
+                            Акция!
+                        </div>
                         <div class="realty-item__img">
                             <picture><source srcset="img/rec/slider/1.webp" type="image/webp"> <img src="img/rec/slider/1.jpg" alt="image"> </picture>
                             <div class="realty-item__name">
